<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.dabi.habitv</groupId>
	<artifactId>parent</artifactId>
	<version>4.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Parent habiTv</name>

	<modules>
		<module>fwk</module>
		<module>application</module>
		<module>plugins</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	 <scm>
        <connection>scm:svn:http://subversion.assembla.com/svn/habitv/trunk</connection>
        <developerConnection>scm:svn:http://subversion.assembla.com/svn/habitv/trunk</developerConnection>
    </scm>	
	
	<distributionManagement>
		<repository>
			<id>ftp-repository</id>
			<url>ftp://ftpperso.free.fr/repository</url>
		</repository>	
  </distributionManagement>	
	
	<repositories>
		<repository>
			<id>dabi-repo</id>
			<name>dabi-repo</name>
			<url>http://dabiboo.free.fr/repository</url>
		</repository>
	</repositories>	

	<dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>com.dabi.habitv</groupId>
			<artifactId>api</artifactId>
			<version>[4.1,4.2)</version>
		</dependency>	
		<dependency>
			<groupId>com.dabi.habitv</groupId>
			<artifactId>framework</artifactId>
			<version>[4.1,4.2)</version>
		</dependency>			

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.3</version>
		</dependency>	
		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>20.0</version>
		</dependency>
		
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>		
		
		<dependency>
			<groupId>rome</groupId>
			<artifactId>rome</artifactId>
			<version>1.0</version>
		</dependency>		
		
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.6.3</version>
		</dependency>		
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.0.6</version>
		</dependency>			
		
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.0</version>
		</dependency>			
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>		
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.15</version>
			<exclusions>
				<exclusion>
					<groupId>javax.mail</groupId>
					<artifactId>mail</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>			
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>		
	</dependencies>	
	</dependencyManagement>
	
	<build>
		<testSourceDirectory>${project.basedir}/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>img</directory>
			</resource>
			<resource>
				<directory>generated</directory>
			</resource>			
			<resource>
				<directory>src</directory>
				<includes>
					<include>**/*properties</include>
					<include>**/*fxml</include>
				</includes>
				<filtering>true</filtering>
			</resource>			
		</resources>	
		<extensions>
		<!-- Enabling the use of FTP -->
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>		
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <index>true</index>
            <manifest>
              <addClasspath>true</addClasspath>
			  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <version>${project.version}</version>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>			
		</plugins>
	</build>
</project>